hphp/hack/test/typecheck/unsafe_cast/ignored/unsafe_cast_ignored.php
<?hh

function f(string $s): int {
  return \HH_FIXME\UNSAFE_CAST<string, int>($s);
}
